[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = "*"
actix = "*"
actix-files = "*"
actix-web = "*"
actix-web-actors = "*"
actix-rt = "*"
html5ever = "*"
markup5ever = "*"
markup5ever_rcdom = "*"
regex = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
urlencoding = "*"
futures = "*"
futures-util = "*"
