[package]
name = "server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = "*"
actix = "*"
actix-files = "*"
actix-web = "*"
actix-web-actors = "*"
actix-rt = "*"
html5ever = { git = "https://github.com/servo/html5ever.git", branch = "main" }
markup5ever = { git = "https://github.com/servo/html5ever.git", branch = "main" }
markup5ever_rcdom = { git = "https://github.com/servo/html5ever.git", branch = "main" }
xml5ever = { git = "https://github.com/servo/html5ever.git", branch = "main" }
regex = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "*"
futures = "*"
futures-util = "*"
